# ew_backend

./: .gitignore  .ngrok.yml  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test.py
apps/: base_consts.py  base_enums.py  base_exceptions.py  base_models.py  base_services.py
apps/api/: base_auth.py  urls.py
apps/api/authentication/: urls.py  views.py
apps/api/comments/: urls.py  view.py
apps/api/dashboard/: urls.py  view.py
apps/api/images/: urls.py  view.py
apps/api/particular_task/: urls.py  view.py
apps/api/projects/: serializers.py  urls.py  view.py
apps/auth/: models.py
apps/authentication/: admin.py  consts.py  exceptions.py  models.py  selectors.py  serializers.py  services.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_address_address_line_1_alter_address_city_and_more.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_address_created_at_address_updated_at_and_more.py  0003_user_address_user_language.py  (+3 more)
apps/celery/: models.py  selectors.py  utils.py
apps/comments/: admin.py  models.py  serializers.py  services.py  utils.py
apps/dashboard/: admin.py  models.py  selectors.py  serializers.py  services.py
apps/email/: consts.py  services.py  tasks.py
apps/images/: admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  signals.py
apps/particular_task/: admin.py  apps.py  consts.py  models.py  selectors.py  serializers.py  services.py
apps/projects/: admin.py  apps.py  consts.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  signals.py  tasks.py
config/: __init__.py  apps.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/Scripts/: docker_bash.bat
config/base/: settings.py  urls.py  wsgi.py
config/dev/: settings.py
config/prod/: settings.py
docs/: dokumentacja.txt
swagger/: schemas.py
templates/: confirm_email_view.html
templates/emails/: contact_mail_PL.html  register_mail_PL.html
tests/: conftest.py  test_mypy.py  test_pytest_settings.py
tests/authentication/: test_authentication_models.py
(+45 files in other folders)
