[tool.poetry]
name = "ew-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Konoval <keks.ivan.k@gmail.com>"]
readme = "README.md"
packages = [{include = "ew_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
assertpy = "^1.1"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.5"
pytest-mypy = "^0.10.3"
pre-commit = "^3.1.1"
django-stubs = "^1.16.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pip-shims = "^0.7.3"
pycln = "^2.1.3"
pip = "^23.0.1"
pylint = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
