[tool.poetry]
name = "ew-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Konoval <keks.ivan.k@gmail.com>"]
readme = "README.md"
packages = [{include = "ew_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.6"
setuptools = "^68.1.2"
python-dotenv = "^1.0.0"
drf-spectacular = "^0.26.4"
drf-yasg = "^1.21.7"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
pytest = "^7.4.0"
mypy = "^1.5.1"
assertpy = "^1.1"
environ = "^1.0"
drf-spectacular-sidecar = "^2023.8.1"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
